--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
   </section>
   <footer>
-    <p>Feito por: Victor - Patrícia Rufino - Patrícia Sprovieri - Matheus Agusto - Burno Barbosa - Anderson</p>
+    <p>Feito por: Victor - Patricia Ruffino - Patrícia Sprovieri - Matheus Agusto - Burno Barbosa - Anderson</p>
   </footer>
   <script src="./js/form.js"></script>
 </body>
