--- a/index.html
+++ b/index.html
@@ -1,38 +1,78 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./CSS/style.css">
-
-  <title>plick-plock</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <title>plick-plock</title>
 </head>
-
 <body>
-  <h1>Plick-Plock</h1>
-  <section>
-    <div class="form-container">
-
-      <form action="/nowhere">
-        <label for="titulo">Título da Foto</label>
-        <input type="text" name="titulo" id="titulo">
-        <label for="descricao">Descrição da Foto</label>
-        <input type="text" name="descricao" id="descricao">
-        <label for="url-imagem">Insira a URL da Imagem</label>
-        <input type="text" name="url-imagem" id="url-imagem">
-        <button type="submit">ENVIAR</button>
-      </form>
+    <header class="container-fluid text-center my-5">
+        <h1>Plick-Plock</h1>
+    </header>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-5"> 
+                <div class="row justify-content-center">
+                    <form class="col-9 mb-5" action="#nowhere" id="formRegistration">
+                        <div class="mb-3 form-group">
+                          <label for="titulo" class="form-label">Título da Foto</label>
+                          <input type="text" class="form-control" id="titulo" placeholder="Um título perfeito...">
+                        </div>
+                        <div class="mb-3 form-group">
+                          <label for="descricao" class="form-label">Descrição da Foto</label>
+                          <input type="text" class="form-control" id="descricao" placeholder="Que coisa incrível...">
+                        </div>
+                        <div class="mb-3 form-group">
+                            <label for="url-imagem" class="form-label">Insira a URL da Imagem</label>
+                            <input type="text" class="form-control" id="url-imagem" placeholder="https://exemplo.com">
+                        </div>
+                        <span class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" 
+                        data-bs-content="Preencha todos os campos corretamente!" id="popoverContainer">
+                            <button class="btn btn-dark" type="submit" disabled>Enviar</button>
+                        </span>
+                      </form>
+                </div>
+            </div>
+            <div class="col-lg-7 text-center">
+                <div class="container my-5" id="img-container">
+                    <div class="row" id="img-row">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="imagem-container">
-
+    <div class="row justify-content-center" id='pai'>
+        <div class="col text-center mt-5" id='bitcoin-div'>
+            <h3>Aproveite para conferir o preço do bitcoin! </h3>
+            <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#bitcoinModal" id='bit-button'><img src="img/bitcao1.png" alt="bitcoin logo"></button>
+        </div>
+        <div class="modal fade" id="bitcoinModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <ul class='list-group'>
+                            <li class="list-group-item"><strong id='bitPrice'></strong></li>
+                            <li class="list-group-item"><strong id='previousBitPrice'></strong></li>
+                            <li class="list-group-item" id="bitcoinFigure"><img class = 'img-fluid' src="" alt="trend"></strong></li>
+                        </ul>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Obrigado!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </section>
-  <footer>
-    <p>Feito por: Victor - Patricia Ruffino - Patrícia Sprovieri - Matheus Agusto - Burno Barbosa - Anderson</p>
-  </footer>
-  <script src="./js/form.js"></script>
+    <footer class="container-fluid text-center my-5">
+        <h5>Feito por: Victor Andrade - Patrícia Ruffino - Patrícia Sprovieri - Matheus Agusto - Burno Barbosa - Anderson Ribeiro</h5>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 </body>
-
 </html>
